fixed homepage issues, removed spacing between map and footer and banner, increased video frame to 20px same as slider

--- a/assets/scss/_img-banner.scss
+++ b/assets/scss/_img-banner.scss
@@ -12,7 +12,7 @@
      height: 555px !important;
    }
    @media(min-width: $screen-lg-min) {
-     height: 670px !important;
+     height: 659px !important;
    }
    .well {
      height: $img-banner-xs-well;
