--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -31,8 +31,8 @@
 }
 .vid-bg {
   background: #f93;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 .banner-bg {
   position: relative;;
@@ -51,7 +51,7 @@
     position: relative;
     bottom: 10px;
     @media(min-width: $screen-md-min) {
-      bottom: 10px;
+      bottom: 20px;
     }
   }
 }
